# OSRepository

./: MultiplicationTimes.ods  MultiplicationTimes.xls  MultiplicationTimes.xltx  README.md  README.txt  elapsed_times.xlsx  elapsed_times_conclusion.docx
1Thread/: CMakeLists.txt
1Thread/src/: main.c
4Threads/: CMakeLists.txt
4Threads/src/: main.c
AvengersAssemble/: CMakeLists.txt
AvengersAssemble/src/: main.c
bouncing_ball/src/: main.c
clock_plot/: CMakeLists.txt
clock_plot/src/: main.c
fork_intro_v2/src/: main.c
labexcercise/: CMakeLists.txt
labexcercise/src/: main.c
mq_receiver/src/: main.c
mq_sender/src/: main.c
process_a/: CMakeLists.txt
process_a/src/: main.c
process_b/: CMakeLists.txt
process_b/src/: main.c
process_c/: CMakeLists.txt
process_c/src/: main.c
project/: CMakeLists.txt
project/include/: FillDate.h  StructDate.h  cosineSeries.h  header.h  hello.h  printArray.h
project/src/: FillDate.c  StructDate.c  cosineSeries.c  csv_creator.c  hello.c  main.c  printArray.c  upperRand.c
python_plotter/: requirements.txt
synchronizer/: CMakeLists.txt
synchronizer/src/: main.c
threads/: CMakeLists.txt
threads/include/: header.h
threads/src/: main.c  thread.c  writer.c
timers/: CMakeLists.txt
timers/include/: header.h
timers/src/: main.c  writer.c
word_explorer/: CMakeLists.txt
word_explorer/include/: contains_word.h  explore_directory.h  word_explorer.h
word_explorer/src/: contains_word.c  explore_directory.c  word_explorer.c
word_explorer/word_explorer/: CMakeLists.txt
word_explorer/word_explorer/src/: main.c
